Correccion de datos

--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre mi</h2>
-            <p><span>Hola, soy Cristhian Zacarias.</span> Ingeniero en Desarrollo y Gestión de Software,
-                con amplios conocimientos en back-end, desarrollados a través de proyectos propios. Busco
-                desarrollar mi carrera, contribuyendo con mis habilidades, para lograr diseños finales que
-                satisfagan las necesidades y preferencias de los clientes.</p>
+            <p><span>Hola, soy Cristhian Zacarias.</span> Soy una persona en busca de una oportunidad en el entorno profesional, con gran motivación 
+                por aprender y adentrarme en el mundo del desarrollo de software, aunque todavía cuento con poca experiencia en este campo, mi interés 
+                por la tecnología me a llevado a explorar diferentes lenguajes de programación buscando mejorar mis habilidades.<br>
+                Recientemente, e comenzado a tomar cursos en línea y a realizar pequeños proyectos personales para familiarizarme con los conceptos 
+                fundamentales, como la programación orientada a objetos, el control de versiones y el desarrollo web.<br>
+                Tengo mucho por aprender y estoy consciente de que el camino para aprender y convertirme en desarrollador experimentado me llevara 
+                tiempo. Me comprometo a desarrollar habilidades practicas y teóricas, con la meta de contribuir a proyectos mas complejos en el 
+                futuro y convertirme en un profesional competente. Sin embargo, mi curiosidad y ganas de mejorar me mantienen enfocado en mis objetivos, 
+                cada proyecto, por pequeño que sea, me hace sentir mas confiado y motivado para seguir creciendo.</p>
 
                 <div class="fila">
                     <!-- Datos Personales -->
@@ -145,20 +150,44 @@
                         <span>Javascript</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>70%</span>
                             </div>
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>Wordpress</span>
+                        <span>HTML</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>65%</span>
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>MYSQL</span>
+                        <span>CSS</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>PHP</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Laravel PHP</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>SQL y NoSQL</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
                                 <span>80%</span>
@@ -166,18 +195,18 @@
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>HTML & CSS</span>
+                        <span>BOOTSTRAP</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>60%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>Laravel</span>
+                        <span>GIT HUB</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span>65%</span>
                             </div>
                         </div>
                     </div>
@@ -186,18 +215,26 @@
                 <div class="col">
                     <h3>Habilidades Profesionales</h3>
                     <div class="habilidad">
-                        <span>Trabajo en Equipo</span>
+                        <span>Compromiso</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>85%</span>
+                                <span>95%</span>
                             </div>
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>Dedicación</span>
+                        <span>Interés por el aprendizaje</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>90%</span>
+                                <span>100%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Responsabilidad</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>100%</span>
                             </div>
                         </div>
                     </div>
@@ -205,15 +242,23 @@
                         <span>Creatividad</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
                     <div class="habilidad">
-                        <span>Comunicación</span>
+                        <span>Trabajo en equipo</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>83%</span>
+                                <span>95%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Organización</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>100%</span>
                             </div>
                         </div>
                     </div>
@@ -221,7 +266,15 @@
                         <span>Puntualidad</span>
                         <div class="barra-habilidad">
                             <div class="progreso">
-                                <span>94%</span>
+                                <span>100%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Comunicación</span>
+                        <div class="barra-habilidad">
+                            <div class="progreso">
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
@@ -266,30 +319,89 @@
                 </div>
 
                 <div class="col derecha">
-                    <h3>Experiencia de trabajo</h3>
+                    <h3>Experiencia profesional</h3>
                     <div class="item der">
                         <h4>CRM - Sigcloud | Practicante</h4>
-                        <span class="casa">Diseños y Soluciones Web</span>
-                        <span class="fecha">2022 - 2022</span>
-                        <p>Creación y diseño de páginas Web.</p>
+                        <span class="casa">Diseño y Soluciones Web</span>
+                        <span class="fecha">Enero 2022 - Mayo 2022</span>
+                        <p>
+                            <ul>
+                                <li>Desarrollo de diagramas.</li>
+                                <li>Desarrollo de base de datos.</li>
+                                <li>Diseño de sistema Web.</li>
+                                <li>Implementación de Inicio de sesión y Cruds.</li>
+                                <li>Validaciones a formularios.</li>
+                                <li>Sistema de ventas en WordPress.</li>
+                            </ul>
+                        </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Documentación a entrevistas TIC | Practicante</h4>
+                        <h4>Documentación del Proyecto de Entrevistas Iniciales TIC | Practicante</h4>
                         <span class="casa">Universidad Tecnológica Del Valle de Toluca</span>
-                        <span class="fecha">2020 - 2020</span>
-                        <p>Analizar, diseñar, desarrollar, instalar y mantener software de aplicación tomando como base los requerimientos del usuario.</p>
+                        <span class="fecha">Mayo 2020 - Agosto 2020</span>
+                        <p>
+                            <ul>
+                                <li>Documentación de la BD de las entrevistas iniciales TIC.</li>
+                                <li>Registro de alumnos en la BD</li>
+                                <li>Desarrollo de diagramas UML</li>
+                                <li>Diccionario de datos de la BD.</li>
+                                <li>Modelo Entidad-Relación y modelo relacional de BD.</li>
+                            </ul>
+                        </p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <h3>Experiencia Laboral</h3>
+                    <div class="item der">
+                        <h4>Operador de Almacén</h4>
+                        <span class="casa">Italika</span>
+                        <span class="fecha">Julio - 2024 | Actualmente</span>
+                        <p>
+                            <ul>
+                                <li>Descarga de materia prima.</li>
+                                <li>Acomodo de materia prima.</li>
+                                <li>Manejo de SAP (Entrada de materia prima, impresión de etiquetas, tipo de material)</li>
+                                <li>Emplayado de tarimas.</li>
+                            </ul>
+                        </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Ayudante General</h4>
-                        <span class="casa">Italika</span>
-                        <span class="fecha">Actualmente</span>
-                        <p>Descarga y acomodo de almacen.</p>
+                        <h4>Operador de Administración de la Información</h4>
+                        <span class="casa">Iron Mountain</span>
+                        <span class="fecha">Febrero 2024 - Julio 2024</span>
+                        <p>
+                            <ul>
+                                <li>Separar archivos por tipo de documento.</li>
+                                <li>Etiquetar archivos.</li>
+                                <li>Registró de paquetes recibidos</li>
+                                <li>Entrega de documentos a distintas áreas.</li>
+                                <li>Validación de documentos.</li>
+                            </ul>
+                        </p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Auxiliar de Archivos.</h4>
+                        <span class="casa">AdeA México</span>
+                        <span class="fecha">Agosto 2022 - Enero 2024</span>
+                        <p>
+                            <ul>
+                                <li>Realización de búsqueda de archivos en el almacén</li>
+                                <li>Acomodo de cajas y archivos.</li>
+                                <li>Registro de asistencia en Excel.</li>
+                                <li>Registro de productividad del personal</li>
+                                <li>Asignación de tareas al personal.</li>
+                            </ul>
+                        </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
